# soundcore

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md  conanfile.txt  main.cpp
cmake/: find_libs.cmake
include/soundcore/: App.hpp  Device.hpp  DeviceInfoList.hpp  DeviceList.hpp  DeviceScanner.hpp
include/soundcore/connection/: DeviceConnector.hpp
include/soundcore/control/: DeviceController.hpp
include/soundcore/device/: Device.hpp  Device2.hpp
include/soundcore/discovery/: DeviceDiscoverer.hpp
include/soundcore/list/: DiscoveredDevicesInfoListModel.hpp
native/: Bluetooth.cpp  Bluetooth.hpp
res/: main.qml  resources.qrc
res/Basic/: BasicButton.qml  BasicSlider.qml  CMakeLists.txt
res/Colors/: CMakeLists.txt  Colors.qml
scripts/: prepare_conan.sh
src/: App.cpp  CMakeLists.txt  Device.cpp  DeviceInfoList.cpp  DeviceList.cpp  DeviceScanner.cpp
src/connection/: DeviceConnector.cpp
src/control/: DeviceController.cpp
src/device/: Device.cpp
src/discovery/: DeviceDiscoverer.cpp
src/list/: DiscoveredDevicesInfoListModel.cpp
tests/: CMakeLists.txt  DeviceInfoListTest.cpp  DeviceTest.cpp  DiscoveredDevicesInfoListModelTest.cpp  QBluetoothDeviceDiscoveryAgentTest.cpp  first_test.cpp
