enable_testing()

find_package(Qt6 REQUIRED COMPONENTS Test Bluetooth)

add_executable(DiscoveredDevicesInfoListModelTest DiscoveredDevicesInfoListModelTest.cpp)
target_link_libraries(DiscoveredDevicesInfoListModelTest PRIVATE Qt6::Test Qt6::Bluetooth soundcore)

add_test(NAME DiscoveredDevicesInfoListModelTest COMMAND DiscoveredDevicesInfoListModelTest)
